# recruitment

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.discovery  Dockerfile.processing  Dockerfile.test  README.md  add_missing_columns.py  app.py  batch_processor.py  cleanup_db_confusion.py  create_new_db.sql  discovery_scheduler.py  docker-compose.test.yml  docker-compose.yml  fix_schema.py  get_urls_from_csvs.py  hello.py  initialize_db.py  insert_url_data.py  logging_config.py  migrate_db.py  migrate_job_adverts.py  migrate_schema.py  models.py  new_recruitment_db.py  new_recruitment_researcher.py  prompts.py  pwc_app.py  pyproject.toml  recruitment_ad_search.py  recruitment_crawl.py  recruitment_db.py  recruitment_db_lib.py  recruitment_extractor.py  recruitment_models.py  recruitment_researcher.py  recruitment_researcher_async.py  recruitment_researcher_new.py  response_processor_functions.py  (+21 more)
libraries/: config_validator.py  storage.py
lji_webminer.egg-info/: PKG-INFO
recruitment/: __init__.py  models.py  process_urls_from_queue.py  recruitment_db.py  url_processing_service.py  url_processor.py
recruitment.egg-info/: PKG-INFO
tests/: test_database.py  test_process_urls_from_queue.py  test_url_discovery.py  test_url_processing.py
