[project]
name = "recruitment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crawl4ai>=0.5.0.post4",
    "dotenv>=0.9.9",
    "google-api-python-client>=2.162.0",
    "googlesearch-python>=1.3.0",
    "llama-index>=0.12.20",
    "lxml-html-clean>=0.4.1",
    "neo4j>=5.28.1",
    "newspaper3k>=0.2.8",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "pydantic[email]>=2.10.6",
    "readability-lxml>=0.8.1",
    "selenium>=4.29.0",
    "tldextract>=5.1.3",
]

[tool.setuptools]
packages.find = { where = ["."], include = ["create", "libraries"], exclude = ["logs*"] }
include-package-data = true
